Table Auth {
  hashed_email varchar
  hashed_password varchar
  salt varchar
}

Table User {
  id integer [primary key]
  name varchar
  email varchar
  created_at timestamp
}

Table Institution {
  id integer [primary key]
  owner_id integer [ref: - User.id]
  name varchar
  created_at timestamp
}

Table Building {
  id integer [primary key]
  institution_id integer [ref: > Institution.id]
  name varchar
  address_line_1 varchar
  address_line_2 varchar
  city varchar
  state varchar
  zip_code varchar
  country varchar
  created_at timestamp
}

Table Room {
  id integer [primary key]
  building_id integer [ref: > Building.id]
  name varchar
  number varchar
  created_at timestamp
}

Table DigitalLock {
  id integer [primary key]
  room_id integer [ref: < Room.id]
  secret_key binary
  created_at timestamp
}

Table DigitalKey {
  id integer [primary key]
  user_id integer [ref: > User.id]
  digital_lock_id integer [ref: > DigitalLock.id]
  expiration timestamp
  payload binary
  created_at timestamp
}

Table EventLog {
  id integer [primary key]
  digital_lock_id integer [ref: > DigitalLock.id]
  type varchar
  log text
  created_at timestamp
}